// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DestinationCard Direct 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Direct
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              DestinationCard is a component which is used on the landing page and also on the search page.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="DestinationCard__StyledDestinationCard-hNKdSr eEJcXu"
            data-test={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="DestinationCard__StyledOverlay-mBgYA cKVZhs"
            />
            <div
              className="DestinationCard__StyledOverlayHover-jKEyUS csvUuO"
            />
            <div
              className="DestinationCard__StyledDestinationCardContent-kgOOHy couxLm"
            >
              <div
                className="DestinationCard__StyledDestinationCardHeader-eYOIym fpvycH"
              >
                <div
                  className="DestinationCard__StyledDeparture-jOzAPK hNWIxg DestinationCard__Shown-bcDxJw ijnOPP"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp jFkkaD"
                    data-test={undefined}
                  >
                    Prague
                  </h1>
                  <svg
                    className="DestinationCard__ArrowUp-kycUYM eYmUOW Icon__StyledIcon-ckyxIP iIarDb"
                    data-test={undefined}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8z"
                    />
                  </svg>
                </div>
                <div
                  className="DestinationCard__StyledDestination-dEEfOE jZzoHq"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp gpIexI"
                    data-test={undefined}
                  >
                    Dubai
                  </h1>
                </div>
                <div
                  className="DestinationCard__Shown-bcDxJw ijnOPP"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp ioNbNl"
                    data-test={undefined}
                  >
                    United Arab Emirates
                  </h1>
                </div>
              </div>
              <div
                className="DestinationCard__StyledDestinationCardPriceStay-glRsGW RuAQm"
              >
                <h1
                  className="Heading__StyledHeading-gucmUp ioNbNl"
                  data-test={undefined}
                >
                  5,563 Kč
                </h1>
              </div>
              <div
                className="DestinationCard__StyledDestinationCardHiddenContent-fDyIbg iQTbH"
              >
                <div
                  className="Stack__StyledStack-cGIpQG fiYcII"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp ioNbNl"
                    data-test={undefined}
                  >
                    One-way
                  </h1>
                  <h1
                    className="Heading__StyledHeading-gucmUp ioNbNl"
                    data-test={undefined}
                  >
                    Direct
                     • 
                    6h 10m
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      DestinationCard
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          departureCity
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Prague
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          destinationCity
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Dubai
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          destinationCountry
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              United Arab Emirates
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          image
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              dubai_ae
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          price
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              5,563 Kč
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          outbound
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  text
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  One-way
                                  "
                                </span>
                                , 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  type
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  Direct
                                  "
                                </span>
                                , 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  duration
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  6h 10m
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DestinationCard Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              DestinationCard is a component which is used on the landing page and also on the search page.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="DestinationCard__StyledDestinationCard-hNKdSr kQGwLP"
            data-test="test"
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="DestinationCard__StyledOverlay-mBgYA cKVZhs"
            />
            <div
              className="DestinationCard__StyledOverlayHover-jKEyUS csvUuO"
            />
            <div
              className="DestinationCard__StyledDestinationCardContent-kgOOHy couxLm"
            >
              <div
                className="DestinationCard__StyledDestinationCardHeader-eYOIym fpvycH"
              >
                <div
                  className="DestinationCard__StyledDeparture-jOzAPK hNWIxg DestinationCard__Shown-bcDxJw ijnOPP"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp jFkkaD"
                    data-test={undefined}
                  >
                    Prague
                  </h1>
                  <svg
                    className="DestinationCard__ArrowUp-kycUYM eYmUOW Icon__StyledIcon-ckyxIP iIarDb"
                    data-test={undefined}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8z"
                    />
                  </svg>
                </div>
                <div
                  className="DestinationCard__StyledDestination-dEEfOE jZzoHq"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp gpIexI"
                    data-test={undefined}
                  >
                    Paris
                  </h1>
                </div>
                <div
                  className="DestinationCard__Shown-bcDxJw ijnOPP"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp ioNbNl"
                    data-test={undefined}
                  >
                    United Arab Emirates
                  </h1>
                </div>
              </div>
              <div
                className="DestinationCard__StyledDestinationCardPriceStay-glRsGW RuAQm"
              >
                <h1
                  className="Heading__StyledHeading-gucmUp ioNbNl"
                  data-test={undefined}
                >
                  5,563 Kč
                </h1>
                <h1
                  className="Heading__StyledHeading-gucmUp ioNbNl"
                  data-test={undefined}
                >
                  10 nights
                </h1>
              </div>
              <div
                className="DestinationCard__StyledDestinationCardHiddenContent-fDyIbg iQTbH"
              >
                <div
                  className="Stack__StyledStack-cGIpQG fiYcII"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp ioNbNl"
                    data-test={undefined}
                  >
                    <svg
                      className="DestinationCard__FlightDirect-etnsGC dCvUNN Icon__StyledIcon-ckyxIP ifOFla"
                      data-test={undefined}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M17.75 12l-4.083-3.5v2.333H6v2.334h7.667V15.5z"
                      />
                    </svg>
                    Wed 31 Oct
                  </h1>
                  <h1
                    className="Heading__StyledHeading-gucmUp ioNbNl"
                    data-test={undefined}
                  >
                    Direct
                     • 
                    6h 10m
                  </h1>
                </div>
                <div
                  className="Stack__StyledStack-cGIpQG fiYcII"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp ioNbNl"
                    data-test={undefined}
                  >
                    <svg
                      className="DestinationCard__FlightDirect-etnsGC enwPEz Icon__StyledIcon-ckyxIP ifOFla"
                      data-test={undefined}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M17.75 12l-4.083-3.5v2.333H6v2.334h7.667V15.5z"
                      />
                    </svg>
                    Fri 9 Nov
                  </h1>
                  <h1
                    className="Heading__StyledHeading-gucmUp ioNbNl"
                    data-test={undefined}
                  >
                    Direct
                     • 
                    6h 50m
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      DestinationCard
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          dataTest
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              test
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          departureCity
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Prague
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          destinationCity
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Paris
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          destinationCountry
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              United Arab Emirates
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          image
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              paris_fr
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          height
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                300
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          price
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              5,563 Kč
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          timeOfStay
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              10 nights
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          outbound
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  date
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  Wed 31 Oct
                                  "
                                </span>
                                , 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  type
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  Direct
                                  "
                                </span>
                                , 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  duration
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  6h 10m
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          inbound
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  date
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  Fri 9 Nov
                                  "
                                </span>
                                , 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  type
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  Direct
                                  "
                                </span>
                                , 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  duration
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  6h 50m
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DestinationCard Return 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Return
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              DestinationCard is a component which is used on the landing page and also on the search page.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="DestinationCard__StyledDestinationCard-hNKdSr eEJcXu"
            data-test={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="DestinationCard__StyledOverlay-mBgYA cKVZhs"
            />
            <div
              className="DestinationCard__StyledOverlayHover-jKEyUS csvUuO"
            />
            <div
              className="DestinationCard__StyledDestinationCardContent-kgOOHy couxLm"
            >
              <div
                className="DestinationCard__StyledDestinationCardHeader-eYOIym fpvycH"
              >
                <div
                  className="DestinationCard__StyledDeparture-jOzAPK hNWIxg DestinationCard__Shown-bcDxJw ijnOPP"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp jFkkaD"
                    data-test={undefined}
                  >
                    Prague
                  </h1>
                  <svg
                    className="DestinationCard__ArrowUp-kycUYM eYmUOW Icon__StyledIcon-ckyxIP iIarDb"
                    data-test={undefined}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8z"
                    />
                  </svg>
                </div>
                <div
                  className="DestinationCard__StyledDestination-dEEfOE jZzoHq"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp gpIexI"
                    data-test={undefined}
                  >
                    Dubai
                  </h1>
                </div>
                <div
                  className="DestinationCard__Shown-bcDxJw ijnOPP"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp ioNbNl"
                    data-test={undefined}
                  >
                    United Arab Emirates
                  </h1>
                </div>
              </div>
              <div
                className="DestinationCard__StyledDestinationCardPriceStay-glRsGW RuAQm"
              >
                <h1
                  className="Heading__StyledHeading-gucmUp ioNbNl"
                  data-test={undefined}
                >
                  5,563 Kč
                </h1>
                <h1
                  className="Heading__StyledHeading-gucmUp ioNbNl"
                  data-test={undefined}
                >
                  10 nights
                </h1>
              </div>
              <div
                className="DestinationCard__StyledDestinationCardHiddenContent-fDyIbg iQTbH"
              >
                <div
                  className="Stack__StyledStack-cGIpQG fiYcII"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp ioNbNl"
                    data-test={undefined}
                  >
                    <svg
                      className="DestinationCard__FlightDirect-etnsGC dCvUNN Icon__StyledIcon-ckyxIP ifOFla"
                      data-test={undefined}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M17.75 12l-4.083-3.5v2.333H6v2.334h7.667V15.5z"
                      />
                    </svg>
                    Wed 31 Oct
                  </h1>
                  <h1
                    className="Heading__StyledHeading-gucmUp ioNbNl"
                    data-test={undefined}
                  >
                    Direct
                     • 
                    6h 10m
                  </h1>
                </div>
                <div
                  className="Stack__StyledStack-cGIpQG fiYcII"
                >
                  <h1
                    className="Heading__StyledHeading-gucmUp ioNbNl"
                    data-test={undefined}
                  >
                    <svg
                      className="DestinationCard__FlightDirect-etnsGC enwPEz Icon__StyledIcon-ckyxIP ifOFla"
                      data-test={undefined}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M17.75 12l-4.083-3.5v2.333H6v2.334h7.667V15.5z"
                      />
                    </svg>
                    Fri 9 Nov
                  </h1>
                  <h1
                    className="Heading__StyledHeading-gucmUp ioNbNl"
                    data-test={undefined}
                  >
                    Direct
                     • 
                    6h 50m
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      DestinationCard
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          departureCity
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Prague
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          destinationCity
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Dubai
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          destinationCountry
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              United Arab Emirates
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          image
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              dubai_ae
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          price
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              5,563 Kč
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          timeOfStay
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              10 nights
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          outbound
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  date
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  Wed 31 Oct
                                  "
                                </span>
                                , 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  type
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  Direct
                                  "
                                </span>
                                , 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  duration
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  6h 10m
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          inbound
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  date
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  Fri 9 Nov
                                  "
                                </span>
                                , 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  type
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  Direct
                                  "
                                </span>
                                , 
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  duration
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  6h 50m
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
